# quicksync-drives

./: .gitignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  cargo_errors.txt  final_lints.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud_client.rs  config.rs  fs_commands.rs  ftp_client.rs  lib.rs  oauth.rs  test_imports.rs
src/store/: config.ts
