[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
suppaftp = { version = "8.0.2", features = ["tokio", "tokio-rustls-ring"] }
tokio = "1"
reqwest = { version = "0.13", features = ["form", "json", "multipart"] }
tauri-plugin-fs = "2"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = "1"
rustls-native-certs = "0.8"
webpki-roots = "0.25"
dirs = "5"
async-recursion = "1.1.1"
systemicons = "0.9.13"
base64 = "0.22.1"
urlencoding = "2.1.3"
tauri-plugin-dialog = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
